--- a/notes/night-owl-palette.html
+++ b/notes/night-owl-palette.html
@@ -21,7 +21,27 @@ td {
     text-align: center;
 }
 </style>
-
+<!--
+https://github.com/sdras/night-owl-vscode-theme/issues/70#issuecomment-482270183
+#011627 Background
+#d6deeb Foreground
+#01111d Current Line
+#1d3b53 Selection
+#80a4c2 Cursor
+#4b6479 Line Number
+#c5e4fd Current Line Number
+#7fdbca Tags/Keywords
+#637777 Comment
+#ef5350 Red
+#22da6e Green
+#addb67 Yellow
+#82aaff Blue
+#f78c6c Orange
+#c792ea Magenta
+#21c7a8 Cyan
+#ffffff White
+#575656 Bright Black
+-->
     <body style="background-color: #011627">
 
 	<h1>Night Owl</h1>
